RESOLVED FIXED105869
Regression(r138545): Makes WebAudio tests crash
https://bugs.webkit.org/show_bug.cgi?id=105869
Summary Regression(r138545): Makes WebAudio tests crash
Chris Dumez
Reported 2012-12-30 06:23:31 PST
http://trac.webkit.org/changeset/138545 wrongly calls adoptGRef() on the object returned by gst_pipeline_get_bus(). This causes the following assertion hit: crash log for WebProcess (pid <unknown>): STDOUT: <empty> STDERR: ASSERTION FAILED: !gstObjectIsFloating(GST_OBJECT(ptr)) STDERR: /home/buildslave-1/webkit-buildslave/efl-linux-64-debug-wk2/build/Source/WebCore/platform/graphics/gstreamer/GRefPtrGStreamer.cpp(130) : WTF::GRefPtr<T> WTF::adoptGRef(T*) [with T = _GstBus] STDERR: 1 0x7fd7d388adde WTF::GRefPtr<_GstBus> WTF::adoptGRef<_GstBus>(_GstBus*) STDERR: 2 0x7fd7d38bc9b1 WebCore::AudioFileReader::decodeAudioForBusCreation() STDERR: 3 0x7fd7d38bbd63 WebCore::enteredMainLoopCallback(void*) STDERR: 4 0x7fd7ce0c7a1b STDERR: 5 0x7fd7ce0c6e53 g_main_context_dispatch STDERR: 6 0x7fd7ce0c71a0 STDERR: 7 0x7fd7ce0c759a g_main_loop_run STDERR: 8 0x7fd7d38bcd88 WebCore::AudioFileReader::createBus(float, bool) STDERR: 9 0x7fd7d38bcf5f WebCore::createBusFromAudioFile(char const*, bool, float) STDERR: 10 0x7fd7d38baad7 WebCore::AudioBus::loadPlatformResource(char const*, float) STDERR: 11 0x7fd7d2d92589 STDERR: 12 0x7fd7d2d92a6e WebCore::HRTFElevation::calculateKernelsForAzimuthElevation(int, int, float, WTF::String const&, WTF::RefPtr<WebCore::HRTFKernel>&, WTF::RefPtr<WebCore::HRTFKernel>&) STDERR: 13 0x7fd7d2d92f3c WebCore::HRTFElevation::createForSubject(WTF::String const&, int, float) STDERR: 14 0x7fd7d2d8fd54 WebCore::HRTFDatabase::HRTFDatabase(float) STDERR: 15 0x7fd7d2d8fc8e WebCore::HRTFDatabase::create(float) STDERR: 16 0x7fd7d2d91b31 WebCore::HRTFDatabaseLoader::load() STDERR: 17 0x7fd7d2d91ab0 STDERR: 18 0x7fd7d39682f5 STDERR: 19 0x7fd7d398fdea STDERR: 20 0x7fd7ccfffe9a STDERR: 21 0x7fd7d643dcbd clone
Attachments
Patch (5.30 KB, patch)
2012-12-30 06:31 PST, Chris Dumez
no flags
Chris Dumez
Comment 1 2012-12-30 06:31:08 PST
Created attachment 180955 [details] Patch Let me know if you prefer to keep using smart pointers here.
WebKit Review Bot
Comment 2 2012-12-30 06:58:36 PST
Comment on attachment 180955 [details] Patch Clearing flags on attachment: 180955 Committed r138576: <http://trac.webkit.org/changeset/138576>
WebKit Review Bot
Comment 3 2012-12-30 06:58:39 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.